force-app/main/default/objects/Forms_Permission__c/Forms_Permission__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object defines the user access of the form allocation</description>
    <label>Forms Permission</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Forms Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>