force-app/main/default/objects/Forms_Permission__c/fields/Form_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Form_Allocation__c</fullName>
    <description>This is refer to the lookup of Form Allocation record</description>
    <label>Form Allocation</label>
    <referenceTo>Form_Allocation__c</referenceTo>
    <relationshipLabel>Forms Permissions</relationshipLabel>
    <relationshipName>Forms_Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>