force-app/main/default/objects/Forms_Permission__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only Form Data related to Active Form Permissions will be shown to customers</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>