force-app/main/default/objects/Forms_Permission__c/fields/Tab_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Tab_User_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field refers to the tab user type</description>
    <label>Tab User Type</label>
    <referenceTo>Tab_User_Type__c</referenceTo>
    <relationshipLabel>Forms Permissions</relationshipLabel>
    <relationshipName>Forms_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>