force-app/main/default/objects/Forms_Permission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Allocation__c</columns>
    <columns>Tab_User_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>